Update for deploy

--- a/index.html.erb
+++ b/index.html.erb
@@ -87,5 +87,10 @@
         <pre class="highlight"><%= renderer.parsed_code %></pre>
       </div>
     </div>
+    <div>
+      <div class="side">
+        <p>Ruby version: <%= RUBY_VERSION %></p>
+      </div>
+    </div>
   </body>
 </html>
