Add github link

--- a/index.html.erb
+++ b/index.html.erb
@@ -94,7 +94,7 @@
     </div>
     <div>
       <div class="side">
-        <p>Ruby version: <%= RUBY_VERSION %></p>
+        <p>Ruby version: <%= RUBY_VERSION %>, Source Code: <a href="https://github.com/rmosolgo/ripper-preview">GitHub</a>.</p>
       </div>
     </div>
   </body>
