--- a/index.html.erb
+++ b/index.html.erb
@@ -85,7 +85,7 @@
         </form>
       </div>
       <div class="side">
-        <h1>Ripper S-expression</h1>
+        <h1><a href="http://ruby-doc.org/stdlib-2.5.0/libdoc/ripper/rdoc/Ripper.html">Ripper</a> S-expression</h1>
         <pre class="highlight">
 # Ripper.sexp_raw(...) =>
 
